# test-python-project

./: .pre-commit-config.yaml  ABOUT_THIS_TEMPLATE.md  CHANGELOG.md  CONTRIBUTING.md  Containerfile  HISTORY.md  MANIFEST.in  Makefile  README.md  foo4.txt  mkdocs.yml  pyproject.toml  setup.py  test.sh
.github/: rename_project.sh
.github/actions/pr-script/: action.yml  pr_script.py
.github/actions/test/: action.yml  test.py
.github/workflows/: bump-version-react.yml  bump-version.yml  check-release.yml  check.yml  comment.yml  pr-script.yml  prep-release.yml  publish-release.yml  release.yml  sync.yml  test-push.yml  test.yml
etc/: cherry-picker.sh
test_python_project/: __init__.py  __main__.py  base.py
tests/: test_base.py
